contact layout finish

--- a/About/prepros.config
+++ b/About/prepros.config
@@ -914,44 +914,13 @@
     },
     "files": [
       {
-        "file": "About/scss/style.scss",
+        "file": "scss/style.scss",
         "config": {
           "tasks": {
             "minify-css": {
               "enable": true
             }
           }
-        }
-      },
-      {
-        "file": "Home/scss/style.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          }
-        }
-      },
-      {
-        "file": "Services/scss/style.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          }
-        }
-      },
-      {
-        "file": "shared/scss/shared-style.scss",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          },
-          "compileImported": true
         }
       }
     ]
